--- a/CarMarketplace.Web/Views/Catalog/Result.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Result.cshtml
@@ -6,7 +6,7 @@
     var imageSrc = "";
 }
 
-<div class="container mt-5">
+<div class="mt-5">
     <div class="d-grid gap-2 col-6 mx-auto text-center mt-5">
         <h1>@ViewData["Title"]</h1>
     </div>
@@ -19,41 +19,43 @@
     @foreach (var post in Model)
     {
         imageSrc = ViewData["CloudDomain"] + @post.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
-        <div class="container text-center border rounded shadow-lg p-3 mb-4 mt-4">
-            <a asp-controller="Catalog" asp-action="Details" asp-route-id="@post.Id" class="row align-items-start text-decoration-none">
-                <div class="col-5">
-                    <img src="@imageSrc" class="card-img" alt="@post.Car.CarName">
-                </div>
-                <div class="col">
-                    <div class="col mt-3 text-start">
-                        <h1>@post.Car.CarName @post.Car.Year</h1>
-                        <hr>
-                        <div class="mt-5">
-                            <span class="fs-1"><span class="text-success">@post.Price</span><span class="fw-bold"> BGN</span></span>
-                            <br>
-                            @{
-                                var displacement = (post.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";
-                            }
-                            <span class="fs-1">@displacement </span>
-                            <span class="fs-1">@post.Car.Engine.FuelType</span>
-                            <br>
-                            <span class="fs-1">@post.Car.TransmissionType</span>
-                            <br>
-                            <span class="fs-1">
-                                @post.Car.Province.ProvinceName
-                                @if (@post.Car.City != null)
-                                {
-                                    <span>@post.Car.City</span>
+        <a class="hover-text-none" asp-controller="Catalog" asp-action="Details" asp-route-id="@post.Id">
+            <div class="container text-center border rounded shadow-lg p-3 mb-4 mt-4">
+                <div class="row align-items-start text-decoration-none">
+                    <div class="col-5">
+                        <img src="@imageSrc" class="card-img" alt="@post.Car.CarName">
+                    </div>
+                    <div class="col">
+                        <div class="col mt-3 text-start">
+                            <h1>@post.Car.CarName @post.Car.Year</h1>
+                            <hr>
+                            <div class="mt-5">
+                                <span class="fs-1">@post.Price<span class="fw-bold"> BGN</span></span>
+                                <br>
+                                @{
+                                    var displacement = (post.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";
                                 }
-                            </span>
-                            <br>
-                            <div class="mt-4 text-end">
-                                <span class="fs-3">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                                <span class="fs-1">@displacement </span>
+                                <span class="fs-1">@post.Car.Engine.FuelType</span>
+                                <br>
+                                <span class="fs-1">@post.Car.TransmissionType</span>
+                                <br>
+                                <span class="fs-1">
+                                    @post.Car.Province.ProvinceName
+                                    @if (@post.Car.City != null)
+                                    {
+                                        <span>@post.Car.City</span>
+                                    }
+                                </span>
+                                <br>
+                                <div class="mt-4 text-end">
+                                    <span class="fs-3">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     }
 </div>
