--- a/CarMarketplace.Web/Views/Catalog/Home.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Home.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["CloudDomain"] = "https://res.cloudinary.com/carmarketplace/image/upload/";
-    ViewData["Title"] = "Car Catalog";
+    ViewData["Title"] = "Latest posts";
     var imageSrc = "";
 }
 
@@ -11,8 +11,10 @@
         <div class="col-md-6">
             <h1 class="my-4">@ViewData["Title"]</h1>
         </div>
-        <div class="col-md-6 align-middle">
-            <a asp-controller="Catalog" asp-action="Search" class="btn btn-primary mt-3 float-end">Search</a>
+        <div class="col-md-6 my-4 align-items-middle">
+            <div class="d-grid col-3 mx-auto float-end mt-2">
+                <a asp-controller="Catalog" asp-action="Search" class="btn btn-primary btn-lg">Search</a>
+            </div>
         </div>
     </div>
 
@@ -27,12 +29,20 @@
                         <div class="card-body">
                             <h3 class="card-title"><strong>@post.Car.CarName</strong></h3>
                             <hr>
-                            <span class="card-text fs-2">Price: @post.Price<span>BGN</span></span>
+                            <span class="card-text fs-3">
+                                Price: <span class="fst-italic">@post.Price</span><span> BGN</span>
+                            </span>
                             <br>
-                            <span class="card-text fs-3">Year: @post.Car.Year</span>
+                            <span class="card-text fs-3">Year: <span class="fst-italic">@post.Car.Year</span></span>
                             <br>
-                            <p class="card-text fs-3">@post.Car.Province.ProvinceName @post.Car.City</p>
-                            <span class="card-text fs-4">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                            <p class="card-text fs-3 fst-italic">
+                                @post.Car.Province.ProvinceName
+                                @if (post.Car.City != null)
+                                {
+                                    <span class="fs-3">, @post.Car.City</span>
+                                }
+                            </p>
+                            <span class="card-text fs-4 fst-italic">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
                             <br>
                         </div>
                     </div>
