--- a/CarMarketplace.Web/Views/Catalog/Search.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Search.cshtml
@@ -11,10 +11,10 @@
 <form method="get" asp-action="Result" asp-controller="Catalog">
     <fieldset>
         <div class="form-group">
-            <label for="MakeSelect" class="form-label mt-4 fs-3">Select Make</label>
-            <select class="form-select" asp-for="Make" id="MakeSelect">
+            <label class="form-label mt-4 fs-3">Select Make</label>
+            <select class="form-select wide-select" asp-for="Make">
                 <option value=0>All</option>
-                @foreach (var item in Model.Makes)
+                @foreach (var item in Model.Makes!)
                 {
                     <option value="@item.Id">@item.Name</option>
                 }
@@ -27,9 +27,9 @@
         </div>
         <div class="form-group">
             <label for="CategorySelect" class="form-label mt-4 fs-3">Select Category</label>
-            <select class="form-select" asp-for="Category" id="CategorySelect">
+            <select class="form-select lg" asp-for="Category" id="CategorySelect">
                 <option value=0>All</option>
-                @foreach (var item in Model.Categories)
+                @foreach (var item in Model.Categories!)
                 {
                     <option value="@item.Id">@item.Name</option>
                 }
@@ -77,7 +77,7 @@
             <label for="ProvinceSelect" class="form-label mt-4 fs-3">Select Province</label>
             <select class="form-select" asp-for="ProvinceId" id="ProvinceSelect">
                 <option value=0>All</option>
-                @foreach (var item in Model.Provinces)
+                @foreach (var item in Model.Provinces!)
                 {
                     <option value="@item.Id">@item.ProvinceName</option>
                 }
@@ -87,13 +87,13 @@
             <br />
             <span class="fs-3 mt-2">Year:</span>
             <div class="form-floating col-md-4">
-                <input type="number" id="fromYear" asp-for="FromYear" class="form-control" style="height: 70px;" min=1886 placeholder="e.g., 1995">
-                <label asp-for="FromYear" class="form-label fs-4">From:</label>
+                <input type="number" id="fromYear" asp-for="FromYear" class="form-control wide-input" min=1886 placeholder="e.g., 1995">
+                <label asp-for="FromYear" class="from-label">From:</label>
                 <span asp-validation-for="FromYear" class="text-danger"></span>
             </div>
             <div class="form-floating col-md-4">
-                <input type="number" id="toYear" asp-for="ToYear" class="form-control" style="height: 70px;" max="2023" placeholder="e.g., 2005">
-                <label asp-for="ToYear" class="form-label fs-4">To:</label>
+                <input type="number" id="toYear" asp-for="ToYear" class="form-control wide-input" max="2023" placeholder="e.g., 2005">
+                <label asp-for="ToYear" class="form-label">To:</label>
                 <span asp-validation-for="ToYear" class="text-danger"></span>
             </div>
         </div>
@@ -101,13 +101,13 @@
             <br />
             <span class="fs-3 mt-2">Price:</span>
             <div class="form-floating col-md-4">
-                <input type="number" asp-for="FromPrice" class="form-control" style="height: 70px;" placeholder="e.g., 2000" />
-                <label asp-for="FromPrice" class="fs-4">From:</label>
+                <input type="number" asp-for="FromPrice" class="form-control wide-input" placeholder="e.g., 2000" />
+                <label asp-for="FromPrice" class="form-label">From:</label>
                 <span asp-validation-for="FromPrice" class="text-danger"></span>
             </div>
             <div class="form-floating col-md-4">
-                <input type="number" id="toPrice" asp-for="ToPrice" class="form-control" style="height: 70px;" placeholder="e.g., 5000" />
-                <label asp-for="ToPrice" class="form-label fs-4">To:</label>
+                <input type="number" asp-for="ToPrice" class="form-control wide-input" placeholder="e.g., 5000" />
+                <label asp-for="ToPrice" class="form-label">To:</label>
                 <span asp-validation-for="ToPrice" class="text-danger"></span>
             </div>
         </div>
