--- a/CarMarketplace.Web/wwwroot/css/site.css
+++ b/CarMarketplace.Web/wwwroot/css/site.css
@@ -17,17 +17,24 @@ body {
     margin-bottom: 60px;
 }
 
-.fade-background {
-    position: relative;
-    background: linear-gradient(to bottom, rgb(255, 163, 102) 0%, rgb(255, 224, 204) 100%);
-    color: white; /* Adjust text color for visibility */
-    padding: 20px 0; /* Adjust padding as needed */
+.form-control {
+    height: 60px;
+    font-size: 21px;
 }
 
-.container-background {
-    background: rgb(204, 230, 255)
+.form-select {
+    height: 60px;
 }
 
-.hover-text-none {
-    text-decoration: none !important;
+.form-select option {
+    font-size: 21px;
+}
+
+.form-floating label {
+    padding-left: 35px;
+    font-size: 20px
+}
+
+.form-floating .wide-input {
+    height: 80px;
 }
